# chia-plot-manager

./: CMakeLists.txt  CMakePresets.json  make_release.bat
.github/workflows/: build.yml
